--- a/cs61a/src/templates/result.html
+++ b/cs61a/src/templates/result.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8" />
     <link href='http://fonts.googleapis.com/css?family=PT+Sans' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href=/css/cs61a.css />
-	<title>CS61A Section 104 Discussion Code | Dickson Tsai</title>
+	<title>This is a Templar example | Dickson Tsai</title>
 	<head profile="http://www.w3.org/2005/10/profile">
 	<link rel="icon" 
       type="image/png" 
@@ -35,49 +35,15 @@
 		<p><span id="tagline">Dickson Tsai </span><span id="divider"> | </span><span class="middle"> <a href="http://cs61a.org">CS61A Summer 2014</a> TA</span><span id="divider"> | </span><span id="jobline">Section 104 5-6:30 PM {M, W} 271 Soda, {T, R} 3105 Etcheverry</span></p>
 <div id="navbar-container">
   <ul id="navbar">
-    <li><a href="../index.html" class="navbar-link">CS61A Section 104 Main Page</a></li>
-    <li><a href="../philosophy.html" class="navbar-link">Philosophy</a></li>
-    <li><a href="../practiceproblems.html" class="navbar-link">Practice Problems</a></li>
-    <li><a href="../extraforexperience.html" class="navbar-link">Extra for Experience</a></li>
+      <li><a href="index.html" class="navbar-link">CS61A Section 104 Main Page</a></li>
+      <li><a href="philosophy.html" class="navbar-link">Philosophy</a></li>
+      <li><a href="practiceproblems.html" class="navbar-link">Practice Problems</a></li>
+      <li><a href="extraforexperience.html" class="navbar-link">Extra for Experience</a></li>
   </ul>
 </div>
-<h2 id="resources">Discussion Warmups</h2>
-<ul>
-    <li>Discussion 9 7/22 - OOP Basics
-      <div class="warmup-container">
-        <ul class="warmups">
-            <li><a href="disc9.html">Problems</a></li>
-            <li><a href="disc9.py">Problems in Python file</a></li>
-            <li><a href="disc9_sol.html">Solutions</a></li>
-        </ul>
-      </div>
-    </li>
-    <li>Discussion 10 7/24 - Inheritance, Iterators
-      <div class="warmup-container">
-        <ul class="warmups">
-            <li><a href="disc10.html">Problems</a></li>
-            <li><a href="disc10.py">Problems in Python file</a></li>
-            <li><a href="disc10_sol.html">Solutions</a></li>
-        </ul>
-      </div>
-    </li>
-</ul>
-
-
-<h2 id="resources">My Code</h2>
-<ul>
-	<li><a href="/cs61a/oog_visualizer.py">Order of growth visualizer</a> using higher order functions and nonlocal</li>
-	<li>Crude text editor using iterators/yield
-		<ul>
-			<li><a href="/cs61a/text_editor.py">Text editor</a></li>
-			<li><a href="/cs61a/file_iterator.py">Dependency file for text editor</a></li>
-		</ul>
-	</li>
-</ul>
-<h2 id="resources">Code from other people</h2>
-<ul>
-    <li><a href="https://github.com/antiboredom/videogrep">Videogrep</a> - a cool program that finds dialogue in video that matches a given search pattern and compiles all the supercuts from it.</li>
-</ul>
+<h2>This is a Templar example</h2>
+<h3>Published: <i>2014-07-23 13:25:17.673824</i></h3>
+<p>This Markdown file is a <em>Templar example</em>.</p>
 
 	</div>
 </body>
