--- a/css/cs61a.css
+++ b/css/cs61a.css
@@ -224,6 +224,28 @@ header {
     font-weight: bold;
 }
 
+.warmup-container {
+    width: 100%;
+    //border-top: solid 1px gray;
+    //border-bottom: solid 1px gray;
+}
+
+.warmups {
+    list-style-type: none;
+    margin: 10px;
+    padding: 0px;
+}
+
+.warmups li {
+    display: inline;
+}
+.warmups a {
+    text-decoration: none;
+	color: #35BCE0;
+    padding: 25px;
+    text-align: center;
+    font-weight: bold;
+}
 /* content END */
 
 /* text styles */
