--- a/css/cs61a.css
+++ b/css/cs61a.css
@@ -58,14 +58,14 @@ body {
 	top: 260px;
 }
 #about a {
-	padding: 10px 200px 21px 20px;
+	padding: 21px 200px 21px 50px;
 }
 #projects {
 	position: absolute;
 	top: 310px;
 }
 #projects a {
-	padding: 10px 200px 21px 65px;
+	padding: 21px 200px 21px 57px;
 }
 #resume {
 	position: absolute;
@@ -86,19 +86,13 @@ body {
 	top: 460px;
 }
 #email a {
-	padding: 21px 200px 21px 75px;
+	padding: 21px 200px 21px 70px;
 }
 
 #email-tag {
 	display: none;
 	position: absolute;
-	top: 370px;
-	background-color: #52B5D8;
-}
-#email-submit-tag {
-	display: none;
-	position: absolute;
-	top: 370px;
+	top: 310px;
 	background-color: #52B5D8;
 }
 
@@ -115,8 +109,7 @@ body {
 }
 
 #sidebar {
-	width: 200px;
-	max-width: 200px;
+	width: 100%;
 	position: fixed;
 	left: 0;
 	top: 0;
@@ -144,7 +137,7 @@ body {
 #titleline {
 	font-size: 62pt;
 	padding-right: 5px;
-	color: gold;
+	color: #3BFB43;
 	padding-left: 20px;
 }
 
@@ -169,7 +162,7 @@ body {
 
 
 header {
-	background-image: url("../assets/memorial_stadium.jpg");
+	background-image: url("../assets/cs61a_header.jpg");
 	margin-top: 0px;
 	border-top: 0px;
 	padding-top: 0px;
